fix: react-select z-index

--- a/src/components/CustomSelect/customSelect.module.scss
+++ b/src/components/CustomSelect/customSelect.module.scss
@@ -1,7 +1,6 @@
 @import '@scss/index.scss';
 
 .select {
-	z-index: 999;
 	width: 100%;
 }
 
